--- a/adminDelete.html
+++ b/adminDelete.html
@@ -45,9 +45,9 @@
                     <div
                         class="flex w-full flex-row justify-around items-center py-3 px-3 sm:flex sm:justify-around lg:flex-col lg:space-y-10 lg:items-start lg:place-content-center">
                         <!-- Add -->
-                        <a href="adminAdd.html" class="nav-item">
+                        <a href="adminAdd.html" class="sm:flex sm:flex-row sm:items-center space-x-2 p-2 text-indigo-700 lg:hover:bg-indigo-100 lg:p-3 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="#4338CA">
                                 <path fill-rule="evenodd"
                                     d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-11a1 1 0 10-2 0v2H7a1 1 0 100 2h2v2a1 1 0 102 0v-2h2a1 1 0 100-2h-2V7z"
                                     clip-rule="evenodd" />
@@ -55,9 +55,9 @@
                             <span class="hidden lg:inline">Add</span>
                         </a>
                         <!-- Delete -->
-                        <a href="adminDelete.html" class="nav-item-active">
+                        <a href="adminDelete.html" class="sm:flex sm:flex-row sm:items-center lg:pl-5 lg:pr-6 flex justify-center lg:p-3 space-x-2 p-2 bg-indigo-700 rounded-md text-white">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="white">
                                 <path fill-rule="evenodd"
                                     d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                                     clip-rule="evenodd" />
@@ -65,18 +65,18 @@
                             <span class="hidden lg:inline">Delete</span>
                         </a>
                         <!-- Update -->
-                        <a href="adminUpdate.html" class="nav-item">
+                        <a href="adminUpdate.html" class="sm:flex sm:flex-row sm:items-center space-x-2 p-2 text-indigo-700 lg:hover:bg-indigo-100 lg:p-3 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="#4338CA">
                                 <path
                                     d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
                             </svg>
                             <span class="hidden lg:inline">Update</span>
                         </a>
                         <!-- View -->
-                        <a href="adminView.html" class="nav-item">
+                        <a href="adminView.html" class="sm:flex sm:flex-row sm:items-center space-x-2 p-2 text-indigo-700 lg:hover:bg-indigo-100 lg:p-3 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="#4338CA">
                                 <path fill-rule="evenodd"
                                     d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z"
                                     clip-rule="evenodd" />
