--- a/userBase2.html
+++ b/userBase2.html
@@ -45,27 +45,27 @@
                     <div
                         class="flex w-full flex-row justify-around items-center py-3 px-3 sm:flex sm:justify-around lg:flex-col lg:space-y-10 lg:items-start lg:place-content-center">
                         <!-- Home -->
-                        <a href="userHome.html" class="nav-item">
+                        <a href="userHome.html" class="sm:flex sm:flex-row sm:items-center space-x-2 p-2 text-indigo-700 lg:hover:bg-indigo-100 lg:p-3 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="#ffffff">
+                                viewBox="0 0 20 20" fill="#4338CA">
                                 <path
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
                             </svg>
                             <span class="hidden lg:inline">Home</span>
                         </a>
                         <!-- Vote -->
-                        <a href="userVote.html" class="nav-item">
+                        <a href="userVote.html" class="sm:flex sm:flex-row sm:items-center space-x-2 p-2 text-indigo-700 lg:hover:bg-indigo-100 lg:p-3 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="#4338CA">
                                 <path
                                     d="M5 3a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2V5a2 2 0 00-2-2H5zM5 11a2 2 0 00-2 2v2a2 2 0 002 2h2a2 2 0 002-2v-2a2 2 0 00-2-2H5zM11 5a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V5zM14 11a1 1 0 011 1v1h1a1 1 0 110 2h-1v1a1 1 0 11-2 0v-1h-1a1 1 0 110-2h1v-1a1 1 0 011-1z" />
                             </svg>
                             <span class="hidden lg:inline">Vote</span>
                         </a>
                         <!-- Result -->
-                        <a href="userResult.html" class="nav-item">
+                        <a href="userResult.html" class="sm:flex sm:flex-row sm:items-center space-x-2 p-2 text-indigo-700 lg:hover:bg-indigo-100 lg:p-3 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="#4338CA">
                                 <path fill-rule="evenodd"
                                     d="M3 3a1 1 0 000 2v8a2 2 0 002 2h2.586l-1.293 1.293a1 1 0 101.414 1.414L10 15.414l2.293 2.293a1 1 0 001.414-1.414L12.414 15H15a2 2 0 002-2V5a1 1 0 100-2H3zm11 4a1 1 0 10-2 0v4a1 1 0 102 0V7zm-3 1a1 1 0 10-2 0v3a1 1 0 102 0V8zM8 9a1 1 0 00-2 0v2a1 1 0 102 0V9z"
                                     clip-rule="evenodd" />
@@ -73,9 +73,9 @@
                             <span class="hidden lg:inline">Result</span>
                         </a>
                         <!-- About -->
-                        <a href="userAbout.html" class="nav-item">
+                        <a href="userAbout.html" class="sm:flex sm:flex-row sm:items-center space-x-2 p-2 text-indigo-700 lg:hover:bg-indigo-100 lg:p-3 rounded-md">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 md:w-8 md:h-8 lg:w-9 lg:h-9"
-                                viewBox="0 0 20 20" fill="currentColor">
+                                viewBox="0 0 20 20" fill="#4338CA">
                                 <path fill-rule="evenodd"
                                     d="M2 5a2 2 0 012-2h8a2 2 0 012 2v10a2 2 0 002 2H4a2 2 0 01-2-2V5zm3 1h6v4H5V6zm6 6H5v2h6v-2z"
                                     clip-rule="evenodd" />
